# wavefront-render

./: .ghci  LICENSE.md  README.md  stack.yaml  wavefront-render.cabal
.stack-work/install/26812796/doc/Leibniz-0.1.0.0/: LICENSE.md
.stack-work/install/26812796/flag-cache/: Cartesian-0.6.0.0-4fTey2HFasTDmC98lzZMfA  GPipe-2.1.8-5pITOF5sMhw7irBqXNKjU3  GPipe-GLFW-1.2.2-6232VZYnIeU99Wr06Pg0kV  Leibniz-0.1.0.0-DW2L1DprBeSKynMxEzKTO7  WaveFront-0.5.0.0-Kz1vHExcfrYFo1L9lXsaRQ  wavefront-render-0.1.0.0-FvMeJIVTVI2CdYT5fdVjPa
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/Cartesian-0.6.0.0-4fTey2HFasTDmC98lzZMfA/Cartesian/: Core.hi  Lenses.hi  Types.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/Cartesian-0.6.0.0-4fTey2HFasTDmC98lzZMfA/Cartesian/Internal/: Core.hi  Instances.hi  Lenses.hi  Types.hi  Utils.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/GPipe-2.1.8-5pITOF5sMhw7irBqXNKjU3/Data/: SNMap.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/GPipe-2.1.8-5pITOF5sMhw7irBqXNKjU3/Graphics/: GPipe.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/GPipe-2.1.8-5pITOF5sMhw7irBqXNKjU3/Graphics/GPipe/: Buffer.hi  Context.hi  Expr.hi  Format.hi  FragmentStream.hi  FrameBuffer.hi  Orphans.hi  PrimitiveArray.hi  PrimitiveStream.hi  Sampler.hi  Shader.hi  Texture.hi  Uniform.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/GPipe-2.1.8-5pITOF5sMhw7irBqXNKjU3/Graphics/GPipe/Internal/: Buffer.hi  Compiler.hi  Context.hi  Expr.hi  Format.hi  FragmentStream.hi  FrameBuffer.hi  Orphans.hi  PrimitiveArray.hi  PrimitiveStream.hi  Shader.hi  Texture.hi  Uniform.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/GPipe-GLFW-1.2.2-6232VZYnIeU99Wr06Pg0kV/Graphics/GPipe/Context/: GLFW.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/GPipe-GLFW-1.2.2-6232VZYnIeU99Wr06Pg0kV/Graphics/GPipe/Context/GLFW/: Format.hi  Input.hi  Resource.hi  Unsafe.hi  Util.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/Leibniz-0.1.0.0-DW2L1DprBeSKynMxEzKTO7/: Leibniz.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/Leibniz-0.1.0.0-DW2L1DprBeSKynMxEzKTO7/Leibniz/: Constants.hi  Trigonometry.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/WaveFront-0.5.0.0-Kz1vHExcfrYFo1L9lXsaRQ/Graphics/: WaveFront.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/WaveFront-0.5.0.0-Kz1vHExcfrYFo1L9lXsaRQ/Graphics/WaveFront/: Foreign.hi  Lenses.hi  Load.hi  Model.hi  Parse.hi  Types.hi
.stack-work/install/26812796/lib/x86_64-windows-ghc-8.0.1/WaveFront-0.5.0.0-Kz1vHExcfrYFo1L9lXsaRQ/Graphics/WaveFront/Parse/: Common.hi  MTL.hi  OBJ.hi
.stack-work/install/26812796/pkgdb/: Cartesian-0.6.0.0-4fTey2HFasTDmC98lzZMfA.conf  GPipe-2.1.8-5pITOF5sMhw7irBqXNKjU3.conf  GPipe-GLFW-1.2.2-6232VZYnIeU99Wr06Pg0kV.conf  Leibniz-0.1.0.0-DW2L1DprBeSKynMxEzKTO7.conf  WaveFront-0.5.0.0-Kz1vHExcfrYFo1L9lXsaRQ.conf  package.cache
app/: TextureDemo.hs  Viewer.hs
app/src/Viewer/: Entity.hs  Mesh.hs  Shader.hs  Texture.hs  Trinkets.hs  Types.hs
assets/models/: extruded-text.mtl  frodo.mtl
assets/models/Lara_Craft/additional_texture/: additional_cloth_ao.tga  additional_cloth_n.tga  additional_cloth_s.tga
