name:                wavefront-render
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/wavefront-render#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, 2016
category:            <category>
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  -- exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , either
                     , monad-loops
                     , WaveFront
                     , Leibniz
                     , GPipe
                     , GPipe-GLFW
                     , WaveFront
  default-language:    Haskell2010


executable Viewer
  hs-source-dirs:      app, app/src
  -- exposed-modules: 
  other-modules:       Viewer.Types
                     , Viewer.Texture
                     , Viewer.Shader

  main-is:             Viewer.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , either
                     , transformers
                     , containers
                     , filepath
                     , directory
                     , JuicyPixels
                     , linear
                     , GLFW-b
                     , GPipe-GLFW
                     , GPipe
                     , vector
                     , lens
                     , Leibniz
                     , cubist-sculptor
                     , Cartesian
                     , WaveFront
                     , wavefront-render
  default-language:    Haskell2010


test-suite wavefront-render-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wavefront-render
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/wavefront-render
